--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
 		"body-parser": "^1.19.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-jwt": "^6.0.0",
 		"express-session": "^1.17.1",
 		"express-validator": "^6.6.0",
+		"jsonwebtoken": "^8.5.1",
 		"mysql": "^2.18.1",
 		"mysql2": "^2.1.0",
 		"pug": "^3.0.0",
